--- a/config.env
+++ b/config.env
@@ -2,6 +2,10 @@
 NODE_ENV=development
 PORT=3000
 
+# JWT
+JWT_SECRET=CMZCZsHua9BvTpBqX4phGqCUAMcsbXek
+JWT_EXPIRES_IN=90d
+
 # Dev DB
 DEV_DB_NAME=propertylah_db
 DEV_DB_USERNAME=danielgoh
