--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "pg": "^8.7.3",
+    "pg-hstore": "^2.3.4",
     "sequelize": "^6.17.0"
   },
   "engines": {
