--- a/config.env
+++ b/config.env
@@ -13,6 +13,6 @@ DEV_DB_USERNAME=postgres
 
 # Prod DB
 PROD_DB_NAME=propertylah_db
-PROD_DB_USERNAME=danielgoh
+PROD_DB_USERNAME=tam.xin.kai@gmail.com
 
 # Prod DB (to be defined later)
